# pyDGuard

./: LICENSE  README.md  pyproject.toml  setup.py
pyDGuard.egg-info/: PKG-INFO  SOURCES.txt
pypackage/: pypackage.py
pypackage/core/: scanner.py
src/core/: scanner.py
